--- a/record/pubspec.yaml
+++ b/record/pubspec.yaml
@@ -3,6 +3,8 @@ description: Audio recorder from microphone to file or stream with multiple code
 version: 5.1.3
 homepage: https://github.com/llfbandit/record/tree/master/record
 
+publish_to: none
+
 environment:
   sdk: ^3.3.0
   flutter: ">=3.16.0"
@@ -18,7 +20,9 @@ dependencies:
   record_web: ^1.0.4
   record_windows: ^1.0.2
   record_linux: '>=0.5.0 <1.0.0'
-  record_android: ^1.2.3
+  # record_android: ^1.2.3
+  record_android:
+    path: ../record_android/
   record_darwin: ^1.1.1
 
 dev_dependencies:
